# conwayrats

./: .gitignore  Case.hs  Con.hs  Dockerfile  Makefile  Param.hs  README.md  RLE.hs  Sym.hs  case4  conwayrats.cabal  note4  rats.hs  stack.yaml
